Agregue modificaciones en la interfaz grafica

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
@@ -13,13 +13,13 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2>
-                        <i style="color:green;"  class="bi bi-cash-coin">Tratamientos a <i style="color:green;"> Cobrar</i></i> 
-                    </h2>
+                    <h1 style="font-family: Bodoni;">
+                        <b class="bi bi-cash-coin">Tratamientos a Cobrar</b> 
+                    </h1>
                 </center>
                 <br>
                     <center>
-                        <h4>
+                        <h4 style="font-family: Bodoni;">
                             <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i>
                         </h4>
                     </center>
