--- a/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobro_contado.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobro_contado.html
@@ -5,7 +5,11 @@
 		<div class="container">
 			<div class="card">
 				<div class="card-body">
-					<center>  <h2> <i style="color:green;" class="bi bi-coin"></i> <b>Cobros Realizados</b></i></h2> </center>
+					<center> 
+						 <h1 style=" font-family: Lucida Calligraphy;"> 
+							<i style="color:green;" class="bi bi-coin"></i> <b>Cobros Realizados</b></i>
+						</h1> 
+					</center>
 				<br>
 				<br>
 				<!--Barra de Busqueda Por nombre-->
@@ -86,7 +90,7 @@
 							<h3 align="center" >
 								<i class="bi bi-exclamation-circle-fill" style="color: red;"></i>
 								<i class="bi bi-currency-exchange" style="color: green;"></i>
-							</h3>
+							</h3> 
 							<h5 align="center">
 								<b>No se han encontrado registros</b> 
 							</h5>
