--- a/Proyecto2/SmileSoft/gestion_cobros/templates/ver_detalle_cobro.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/ver_detalle_cobro.html
@@ -5,7 +5,11 @@
 		<div class="container" style="width: 70%;">
 			<div class="card">
 				<div class="card-body">
-					<center>  <h2> <i class="bi bi-ticket-detailed"></>Detalle del Cobro realizado</i></h2> </center>
+					<center> 
+						 <h2 style="font-family: Bodoni;">
+							 <b class="bi bi-ticket-detailed"></>Detalle del Cobro realizado</b>
+						</h2>
+					 </center>
 				<br>
 				<br>
                 <!-- <center>
