--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/asignar_insumo.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/asignar_insumo.html
@@ -16,8 +16,11 @@
                         {%endif%}
                         <br>
                         <center>
-                            <h3>
-                                <b>Insumos para el tratamiento de: </b> <b style="color:blue; font-size:25px;" >
+                            <h1 style="font-family: Bodoni;">
+                                <b>Insumos para el tratamiento: </b>
+                            </h1>
+                            <h3 style="font-family: Bodoni;">
+                                 <b style="color:blue; font-size:25px;" >
                                 <td>{{ tratamiento.nombre_tratamiento }}</b></td>
                             </h3>
                         </center>
