--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos_asignados.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos_asignados.html
@@ -18,16 +18,16 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                  <h3> 
-                    <b>Tratamiento: </b><FONT SIZE="5" style="color:blue;"> <i><b>{{tratamiento.nombre_tratamiento}}</b></i></FONT>
+                    <h1 style="font-family: Bodoni;">
+                        <b>Tratamiento </b>
+                    </h1>
+                  <h3 style="font-family: Bodoni;"> 
+                    <FONT SIZE="5" style="color:blue;"> 
+                        <i><b>{{tratamiento.nombre_tratamiento}}</b></i>
+                    </FONT>
                 </h3>
                 </center>
                 <br>
-                <center>
-                    <h4>
-                       <b> Insumos asignados </b>
-                    </h4>
-                </center>
 
                 <!--Inicio de la TABLA DE TRATAMIENTOS-->
                 <table>
