--- a/Proyecto2/SmileSoft/gestion_roles/templates/roles/listar_roles.html
+++ b/Proyecto2/SmileSoft/gestion_roles/templates/roles/listar_roles.html
@@ -15,7 +15,9 @@
     <div class="card">
         <div class="card-body">
             <center> 
-                <h2 <i class="bi bi-person-check"> Lista de Roles</i> </h2>
+                <h1 style="font-family: Lucida Calligraphy;">
+                    <b class="bi bi-person-check"> Lista de Roles</b> 
+                </h1>
             </center>
         <!--fILA de la funcion Agregar rol-->
         <table  align="right" >
