--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_mis_tratamientos_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_mis_tratamientos_pendientes.html
@@ -13,12 +13,11 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2 style="color: rgba(13, 0, 255, 0.886);"> 
-                        <b>
-                            <i class="bi bi-clock-history"></i>
-                            Tratamientos pendientes
+                    <h1 style=" font-family: Lucida Calligraphy;"> 
+                        <b> 
+                            <b class="bi bi-clock-history">Tratamientos pendientes</b>
                         </b>
-                    </h2>
+                    </h1>
                     <br>
                     {%if tratamientos_pendientes%}
                         <h5>
