--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/modificar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/modificar_tratamiento.html
@@ -11,7 +11,12 @@
   <div class=" col-12 col-md-6 offset-md-3" >
         <div class="card">
             <br>
-            <center>  <h2> Modificar Tratamiento</h2> </center>
+            <center>  
+                <h1 style="font-family: Bodoni;"> 
+                  <b> Modificar Tratamiento</b> 
+                </h1> 
+                <i class="bi bi-pencil-square"> ¡ Modifique los datos del tratamiento! </i>
+            </center>
             <div class="card-body">
                 <form action="" method="post">
                     {%csrf_token%}
