--- a/Proyecto2/SmileSoft/webapp/templates/usuario/agregar_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/agregar_usuario.html
@@ -19,7 +19,14 @@
             <div class="col-12 col-md-6 offset-md-3">
                 <div class="card">
                     <br>
-                    <center><h2> Agregar Usuario</h2></center>  
+                    <center>
+                      <h1 style="font-family: Bodoni;">
+                          <b>Agregar Usuario</b>
+                      </h1> 
+                  </center>
+                  <div class="container mt-3 text-center">
+                    <i class="bi bi-person-plus"> ¡ Ingrese los datos del usuario ! </i>
+                  </div>
                     <div class="card-body">
                         <form action="" method="post">
                             {%csrf_token%}
