--- a/Proyecto2/SmileSoft/webapp/templates/usuario/cambiar_password_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/cambiar_password_usuario.html
@@ -13,7 +13,11 @@
     <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center>  <h2> Cambiar contraseña</h2> </center>
+            <center>
+                <h1 style="font-family: Bodoni;">
+                    <b>Cambiar contraseña</b>
+                </h1>
+            </center>
             <div class="card-body">
                 <form action="" method="post">
                     {%csrf_token%}                     
@@ -36,7 +40,9 @@
                         <!--Formulario de modificaciones-->    
                       <b>
                           <center>
-                            <h4><b>Usuario:</b> <i>{{object.usuario}}</i></h4>
+                            <h4 style="font-family: Bodoni;">
+                                <b>Usuario:</b> <i>{{object.usuario}}</i>
+                            </h4>
                           </center>
                           <br>
                         <div class="form-group">
