--- a/Proyecto2/SmileSoft/webapp/templates/usuario/listar_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/listar_usuario.html
@@ -20,8 +20,9 @@
         <div class="card">
             <div class="card-body">
                     <center> 
-                        
-                        <h2 <i class="bi bi-people-fill"> Usuarios Smile</i> </h2>
+                        <h1 style="font-family: Lucida Calligraphy;"> 
+                            <i class="bi bi-people-fill">Listado de Usuarios</i> 
+                        </h1>
                     </center>
                 <!--fILA de la funcion Agregar usuario-->
                 <table  align="right" >
