--- a/Proyecto2/SmileSoft/gestion_historial_clinico/templates/listar_pacientes_historial.html
+++ b/Proyecto2/SmileSoft/gestion_historial_clinico/templates/listar_pacientes_historial.html
@@ -5,7 +5,11 @@
 		<div class="container">
 		<div class="card">
 			<div class="card-body">
-				<center>  <h2>	 <i class="bi-person-lines-fill">Pacientes con historial clinico</i></h2> </center>
+				<center> 
+					 <h2 style=" font-family: Lucida Calligraphy;">	
+						 <b class="bi-person-lines-fill">Pacientes con historial clinico</b>
+						</h2>
+					 </center>
 				<br>
 				<br>
 				<br>
