--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_insumo.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_insumo.html
@@ -7,7 +7,14 @@
             <div class=" col-md-10 offset-md-1" >
                     <div class="card">
                         <br>
-                        <center>  <h2>Agregar Insumo</h2> </center>      
+                        <center>
+                            <h1 style="font-family: Bodoni;">
+                                <b>Agregar Insumo</b> 
+                            </h1> 
+                        </center>
+                        <div class="container mt-3 text-center">
+                            <i> ¡ Ingrese los datos del Insumo ! </i>
+                        </div>
                             <!-- <form method="POST" id="group_form" novalidate=""> -->
                     
                             <form action="" method="post">
@@ -105,7 +112,7 @@
     {%endif%}                          
                 <table  align="center" >
                     <tr>
-                    <td> <a href="/insumo/listar_insumo/" class="btn btn-info">Ver listado de insumos </a> </td>
+                    <td> <a href="/insumo/listar_insumos/" class="btn btn-info">Ver listado de insumos </a> </td>
                     </tr>
                 </table>
    </div>
