--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
@@ -7,7 +7,6 @@
 
 {% block javascripts%}
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-     
 
 {%endblock%}
 
@@ -18,7 +17,9 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2 <i class="bi bi-list-check"> Lista de Insumos</i> </h2>
+                    <h1 style="font-family: Lucida Calligraphy;"> 
+                        <b class="bi bi-list-check"> Lista de Insumos</b> 
+                    </h1>
                 </center>
                 
                 {%if perms.gestion_inventario_insumos.add_insumo%}  
