--- a/Proyecto2/SmileSoft/gestion_roles/templates/roles/modificar_rol.html
+++ b/Proyecto2/SmileSoft/gestion_roles/templates/roles/modificar_rol.html
@@ -11,7 +11,11 @@
   <div class=" col-md-10 offset-md-1" >
         <div class="card">
             <br>
-            <center>  <h2> Modificar Rol</h2> </center>
+            <center>
+                <h1 style="font-family: Bodoni;">
+                    <b>Modificar Rol</b>
+                </h1>
+            </center>
             <div class="card-body">
                 <form action="" method="post">
                     {%csrf_token%}
@@ -20,10 +24,7 @@
                     ✅¡Modificación exitosa!
                     </div>
                     {%endif%}
-
                         {{form.as_p}}
-                   
-
                         <br>
                         <div class="d-flex justify-content-center">
                             <!--tipo submit para enviar,luego son clases y colores btn, y btnblock para que muestre a lo largo de la tarjeta-->
@@ -36,32 +37,25 @@
                             <i class="bi-x-circle"></i>
                             Cancelar
                            </a>
-                        
                         </div> 
-
                 </form>
-                
            <div>
       </div>
-
     </div>
 </div>
  {% else%}
-<h2 class="titulo text-center">
-                  No tiene permisos para ingresar a esta sección
-                 
-                  
-              </h2>
+    <h2 class="titulo text-center">
+        No tiene permisos para ingresar a esta sección
+  </h2>
 {%endif%}
-                    <hr>
-                        
-                        <table  align="right" >
-                            <tr>
-                            <td> <a href="/roles/listar_roles/" class="btn btn-info">Ver listado de roles </a> </td>
-                            </tr>
-                        </table>
-
-
+    <hr>
+    <table  align="right" >
+        <tr>
+            <td> 
+                <a href="/roles/listar_roles/" class="btn btn-info">Ver listado de roles </a> 
+            </td>
+        </tr>
+    </table>
 {%endblock%}
 
 
