--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
@@ -18,7 +18,9 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2 <i class="bi bi-clipboard2-pulse"> Lista de Tratamientos</i> </h2>
+                    <h1 style="font-family: Lucida Calligraphy;">
+                        <b class="bi bi-clipboard2-pulse"> Lista de Tratamientos</b> 
+                    </h1>
                 </center>
                 
                 {%if perms.gestion_tratamiento.add_tratamiento%}  
