--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
@@ -13,9 +13,10 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2> <b> Tratamientos Pendientes </b>
+                    <h1 style=" font-family: Lucida Calligraphy;"> 
+                        <b> Tratamientos Pendientes </b>
                      <img class="img-circle"  src="{% static 'img/dentista.png' %}"  width="60px" height="60px"> 
-                     </h2>
+                     </h1>
                 </center>
                
                 <!-- <strong>  <FONT COLOR="blue" style="font-size: 1.0rem" > &nbsp;  Filtro por fecha</FONT> </strong> -->
