--- a/Proyecto2/SmileSoft/webapp/templates/usuario/modificar_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/modificar_usuario.html
@@ -13,7 +13,11 @@
     <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center>  <h2> Modificar Usuario</h2> </center>
+            <center>
+                <h1 style="font-family: Bodoni;">
+                    <b>Modificar Usuario</b>
+                </h1>
+            </center>
             <div class="card-body">
                 <form action="" method="post">
                     {%csrf_token%}                     
