--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/agendar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/agendar_cita.html
@@ -18,7 +18,9 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2 <i class="bi bi-calendar"></i> Agregar Cita</i> </h2>
+                    <h1 style="font-family: Bodoni;"> 
+                        <b class="bi bi-calendar"> Agregar Cita</b>
+                    </h1>
                 </center>
              <br>
                <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i> </h5></center>
