--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_cita.html
@@ -7,23 +7,19 @@
 
 {% block javascripts%}
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-     
-
 {%endblock%}
 <!--Cuadro de DIALOGO DE ELIMINAR-->
 
-
-
 {%block content%}
   
-
 {%if perms.gestion_agendamiento.view_cita%}
     <div class="container">
         <div class="card">
             <div class="card-body">
                 <center> 
-                        
-                    <h2 <i class="bi bi-calendar"></i> Agregar Cita</i> </h2>
+                    <h1 style="font-family: Bodoni;"> 
+                        <b class="bi bi-calendar"> Agregar Cita</b> 
+                    </h1>
                 </center>
              <br>
                <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i> </h5></center>
@@ -40,12 +36,12 @@
                     <div style="margin: 20px;" >
                         <br>
                         <div class="form-group">
-                            <label for="tratamiento_simple"> Motivo de Consulta</label>
+                            <label for="tratamiento_simple"><b>Motivo de Consulta</b> </label>
                                 {{form.tratamiento_simple}} <br>
                         </div>
                         <br>
                         <div class="form-group">
-                           <label for="{{form.fecha.name}}">{{form.fecha.label}}</label>
+                           <label for="{{form.fecha.name}}"><b>{{form.fecha.label}}</b> </label>
                             {{form.fecha}}
                         </div>
                             {% comment %} <br><small> <i>-Lunes a Viernes | 08:00hs a 12:00hs ; 13:30hs a 21:00hs </i></small> {% endcomment %}
@@ -62,27 +58,24 @@
                         </div>  {% endcomment %}
                        
                          <div class="form-group">
-                            <label for="hora_atencion"> Hora de atencion</label>
+                            <label for="hora_atencion"><b>Hora de atencion</b> </label>
                                 {{form.hora_atencion}} <i class="bi bi-alarm"></i> <br>
                         </div>
                         <br>
                         <div class="form-group">
-                          <label for="profesional"> Elegir al Profesional: </label> 
+                          <label for="profesional"><b>Elegir al Profesional:</b> </label> 
                             {{form.profesional}}
                         </div> 
-                            {% comment %} <p> <label for="hora"> Hora de la cita</label>
+                            {% comment %} <p> <label for="hora"><b>Hora de la cita</b> </label>
                               {{form.hora}}  {% endcomment %}
                                {% comment %} <input type="time" name="hora" required =""> {% endcomment %}
                           {% comment %} <input type="time" name="hora" min="08:00" max="21:00" step="3600" /> {% endcomment %}
                          </p>
                         <div class="form-group">
-                            <label for="{{form.estado.name}}">{{form.estado.label}}</label>
+                            <label for="{{form.estado.name}}"><b>{{form.estado.label}}</b></label>
                                 {{form.estado}}
                         </div> 
-                             
-                      
                     </div>
-
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-primary" type="submit" style="margin: 10px;">
                             <i class="bi-save"></i>
@@ -94,11 +87,7 @@
                         </a>
                     </div>
                     <hr>
-                   
                 </form>
-
-
-
             </div>
         </div>
             
