--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_hora.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_hora.html
@@ -18,7 +18,9 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2> <i class="bi bi-calendar"></i> Agregar Horario</i> </h2>
+                    <h1 style="font-family: Bodoni;"> 
+                        <b class="bi bi-calendar">Agregar Horario</b> 
+                    </h1>
                 </center>
               <br>
                 <form method="POST" id="group_form" novalidate="">
