--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
@@ -4,25 +4,22 @@
 
 {%load static%}
 
-
 {% block javascripts%}
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-     
-
 {%endblock%}
 <!--Cuadro de DIALOGO DE ELIMINAR-->
 
 {%block content%}
-  
-
   {%if perms.gestion_agendamiento.change_cita%}
     <div class="container">
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2 <i class="bi bi-calendar"></i> Modificar | Cita</i> </h2><br>
+                    <h1 style="font-family: Bodoni;"> 
+                        <b class="bi bi-calendar">Modificar | Cita</b> 
+                    </h1><br>
                     <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i> </h5></center>
-                      <center <b>Fecha de nacimiento:</b> <i>{{persona.fecha_nacimiento}} </i> </center>
+                      <center> <b>Fecha de nacimiento:</b> <i>{{persona.fecha_nacimiento}} </i> </center>
                 </center>
 
                 <form method="POST" id="group_form" novalidate="">
