--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita_usuario.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita_usuario.html
@@ -16,7 +16,9 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2> <i class="bi bi-calendar"></i> Modificar | Cita</i> </h2><br>
+                    <h1 style="font-family: Bodoni;"> 
+                        <b class="bi bi-calendar">Modificar | Cita</b> 
+                    </h1><br>
                     <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i> </h5></center>
                     <div class="alert alert-success " role="alert">
                         <small> 
@@ -24,9 +26,6 @@
                         </small>
                     </div>
                 </center>
-              
-               
-
                 <form method="POST" id="group_form" novalidate="">
                     {%csrf_token%}
                         {%if mensaje%}
@@ -37,29 +36,28 @@
                     <div style="margin: 20px;" >
                         <br>
                         <div class="form-group">
-                            <label for="tratamiento_solicitado"> Motivo de Consulta</label>
+                            <label for="tratamiento_solicitado"><b>Motivo de Consulta</b> </label>
                                {{form.tratamiento_solicitado}}<br>
                         </div>
                         <br>
-
                         <div class="form-group">
-                           <label for="{{form.fecha.name}}">{{form.fecha.label}}</label>
+                           <label for="{{form.fecha.name}}"><b>{{form.fecha.label}}</b> </label>
                             {{form.fecha}}
                         </div>
                         <br>
                        <div class="form-group">
-                           <label for="{{form.hora_atencion.name}}"> {{form.hora_atencion.label}}</label>
+                           <label for="{{form.hora_atencion.name}}"><b>{{form.hora_atencion.label}}</b> </label>
                             {{form.hora_atencion}}
                         </div> 
                          <br>
                         <div class="form-group">
-                          <label for="profesional"> Elegir al Profesional: </label> 
+                          <label for="profesional"><b>Elegir al Profesional:</b>  </label> 
                             {{form.profesional}}
                         </div>
                         <br>
                         {%if perms.gestion_agendamiento.view_cita%}
                          <div class="form-group">
-                            <label for="{{form.estado.name}}">{{form.estado.label}}</label>
+                            <label for="{{form.estado.name}}"><b>{{form.estado.label}}</b> </label>
                                 {{form.estado}}
                         </div> 
                         {%endif%}
