--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_addCita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_addCita.html
@@ -12,18 +12,16 @@
 {%endblock%}
 <!--Cuadro de DIALOGO DE ELIMINAR-->
 
-
-
 {%block content%}
   
-
 {%if perms.gestion_agendamiento.add_cita%}
     <div class="container">
         <div class="card">
             <div class="card-body">
                 <center> 
-                        
-                    <h2 <i class="bi bi-calendar"></i> Agregar Cita</i> </h2>
+                    <h1 style="font-family: Bodoni;"> 
+                        <b class="bi bi-calendar"> Agregar Cita</b>
+                    </h1>
                 </center>
               <br>
                <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}} </i> </h5></center>
@@ -40,35 +38,32 @@
                     <div style="margin: 20px;" >
                         <br>
                         <div class="form-group">
-                            <label for="tratamiento_simple"> Motivo de Consulta</label>
+                            <label for="tratamiento_simple"><b>Motivo de Consulta</b> </label>
                                 {{form.tratamiento_simple}} <br>
                         </div>
                         <br>
                         <div class="form-group">
-                           <label for="{{form.fecha.name}} ">{{form.fecha.label}}</label>
+                           <label for="{{form.fecha.name}} "><b>{{form.fecha.label}}</b> </label>
                             {{form.fecha}}
                         </div>
                           <br>
                          <div class="form-group">
-                            <label for="hora_atencion" > Hora de atencion</label>
+                            <label for="hora_atencion" ><b>Hora de atencion</b> </label>
                                 {{form.hora_atencion}} <i class="bi bi-alarm"></i> <br>
                         </div>
                       
                         {% comment %} <br>
                         <div class="form-group">
-                           <label for="{{form.hora.name}}"> {{form.hora.label}}</label>
+                           <label for="{{form.hora.name}}"><b>{{form.hora.label}}</b> </label>
                             {{form.hora}}
                         </div>  {% endcomment %}
                           <br>
                         <div class="form-group">
-                          <label for="profesional"> Elegir al Profesional: </label> 
+                          <label for="profesional"><b>Elegir al Profesional:</b>  </label> 
                             {{form.profesional}}
                         </div>
                     </div>
-                     
-                      
                     </div>
-
                     <div class="d-flex justify-content-center">
                         <button  href="/agendamiento/calendario_usuario/ " class="btn btn-primary" type="submit" style="margin: 10px;">
                             <i class="bi-save"></i>
