--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/visualizar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/visualizar_cita.html
@@ -20,7 +20,9 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2> <i class="bi bi-calendar2-check"></i> Cita realizada </i> </h2><br>
+                    <h1 style="font-family: Bodoni;"> 
+                        <b class="bi bi-calendar2-check">Cita realizada</b> 
+                    </h1><br>
                     <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i> </h5></center>
                       <center <b>Fecha de nacimiento:</b> <i>{{persona.fecha_nacimiento}} </i> </center>
                 </center>
@@ -56,18 +58,13 @@
                             {{profesional}}
                         </div>
                         <br>
-                      
                         {%if perms.gestion_agendamiento.view_cita%}
                             <div class="form-group">
                                 <label for="{{form.estado.name}}"><b>{{form.estado.label}}</b></label>
                                     {{form.estado}}
                             </div> 
                         {%endif%}
-
-                       
                     </div>
-                   
-
                     <div class="d-flex justify-content-center">
                         <a onclick="history.back()" class="btn btn-danger" style="margin: 10px;">
                             <i class="bi bi-arrow-left-square"></i>
