CAMBIO EN INSUMOS EXISTENCIA
TENGO UN PROBLEMA CON EXISTENCIA Y ES QUE NO CAMBIA DE ESTADO NO ME FUNCIONA LA CONDICIÓN QUE LE PONGO

QUISIERA HACERLE ALGUNAS CONSULTAS CUANDO SE PUEDA PARA TERMINAR ESTA PARTE

HICE SIN BASE DE DATO Y ELIMINÉ NOMAS LAS MIGRACIONES PARA QUE A USTEDES LES PUEDA MIGRAR BIEN Y LE SALGAN MIS CAMBIOS, NO SUBO BASE DE DATOS ESTA VEZ PORQUE PIENSO QUE USTEDES PODRIAN TENER UNA BASE CON MÁS CAMBIOS, Y LO DE EXISTENCIA SE RELLENA TODO AL MIGRAR POR ESO NO HABRÁ DRAMAS

--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
@@ -81,6 +81,7 @@
                                         <td>{{c.unidad_x_paquete}} u </td> 
                                         <td>{{c.cantidad_unitaria}} {{c.ud_unitaria}}</td> 
                                         <td>{{c.stock_minimo}} {{c.ud_unitaria}}</td> 
+                                        <td >{{c.existencia}}</td>
                                         <td></td> 
                                         
                                         <!-- <td>{{c.estado}}</td>  -->
@@ -97,7 +98,7 @@
                                         <!-- Eliminar-->
                                         {%if perms.gestion_inventario_insumos.delete_insumo%}          
                                             <td>
-                                                <a href="/insumo/eliminar_insumo/{{c.codigo_insumo}}" class="btn btn-danger btnEliminacion">
+                                                <a href="/insumo/eliminar_insumos/{{c.codigo_insumo}}" class="btn btn-danger btnEliminacion">
                                                     <i class="bi-trash-fill" ></i> 
                                                         Eliminar
                                                 </a> 
