--- a/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/ingresar_datos_factura.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/ingresar_datos_factura.html
@@ -83,7 +83,7 @@
                 </div>
             </form>
             <div align="center">
-                <a href="#" class="btn btn-outline-primary">
+                <a href="/cobros/generar_factura/" target="_blank" class="btn btn-outline-primary">
                     <i class="bi bi-file-pdf"></i>
                     Generar factura
                 </a>
