--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
@@ -130,7 +130,7 @@
                         </a> {% endcomment %}
                         {%endif%}
                         &nbsp;
-                        <a type="submit" href="/cobros/presupuesto_pdf/{{paciente.id_paciente}}" class="btn btn-secondary btn-block txt-primary">
+                        <a type="submit" href="/cobros/presupuesto_pdf/{{paciente.id_paciente}}" target="_blank" class="btn btn-secondary btn-block txt-primary">
                             <i class="bi bi-printer"></i>
                             Presupuesto
                         </a>
