--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -331,7 +331,7 @@
                                           {%endif%} 
                                                    
                                               <!--Opcion 8-->
-                                              {%if perms.permiso.add_permission%}
+                                              {%if perms.gestion_cobros.add_cobrocontado%}
                                                  <li class="nav-item dropdown">
                                                     <a class="nav-link dropdown-toggle" href="gestion_administrativo" id="navbarDropdown"
                                                     role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -342,7 +342,7 @@
                                                       <strong class="dropdown-header" style="color:blue; font-size:16px;" >
                                                             Facturas 
                                                                   </strong>
-                                                      <li><a class="dropdown-item" href="#"> 
+                                                      <li><a class="dropdown-item" href="/cobros/listar_facturas/"> 
                                                             <font color="black">• Listado de Facturas</font></a></li>
                                                             <!--Opcion 8.2 -->
                                                     
