ACTUALIZACIÓN DE EXISTENCIA "DISPONIBLE" CON BD N° 72
AQUÍ LOS CAMBIOS Y ACTUALIZACIÓNES YA SALE UNIDADES EN AGREGAR EN VEZ DE 'g'

--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_insumo.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_insumo.html
@@ -105,7 +105,7 @@
     {%endif%}                          
                 <table  align="center" >
                     <tr>
-                    <td> <a href="/insumo/listar_insumo/" class="btn btn-info">Ver listado de insumos </a> </td>
+                    <td> <a href="/insumo/listar_insumos/" class="btn btn-info">Ver listado de insumos </a> </td>
                     </tr>
                 </table>
    </div>
