--- a/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/ingresar_datos_factura.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/ingresar_datos_factura.html
@@ -81,7 +81,7 @@
                 </div>
             </form>
             <div align="center">
-                <a href="#" class="btn btn-outline-primary">
+                <a button="submit" href="#" class="btn btn-outline-primary">
                     <i class="bi bi-file-pdf"></i>
                     Generar factura
                 </a>
